fixed the Google Map issue and added z-index to header

--- a/sass/components/social-media/_social-media.scss
+++ b/sass/components/social-media/_social-media.scss
@@ -2,6 +2,7 @@
 
 .page-id-27 {
     .social-media-section {
+        margin: 3rem 0;
         p {
             font-weight: 700;
             text-align: center;
